--- a/app/archive/page.module.css
+++ b/app/archive/page.module.css
@@ -7,6 +7,9 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  min-height: 110px;
+  justify-content: center;
+  align-items: center;
 }
 
 .embedImage {
