--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,13 +11,21 @@
   padding: 12px;
   width: 100%;
   border-radius: 8px 0px 0px 8px;
-  border: none;
+  border: 1px solid #666;
+}
+
+.urlInput:hover {
+  border: 1px solid #888;
+}
+
+.urlInput:focus {
+  outline: none;
+  border: 1px solid #ccc;
 }
 
 .inputContainer {
   display: flex;
   flex-direction: row;
-  align-items: center;
   width: 500px;
   max-width: 100%;
   padding: 16px 0px;
@@ -26,5 +34,28 @@
 .urlButton {
   padding: 0px 12px;
   border-radius: 0px 8px 8px 0px;
-  height: 40px;
+  height: 39px;
+  border: none;
+  cursor: pointer;
+  background: white;
+  color: black;
+}
+
+.urlButton:hover {
+  background: #dadada;
+}
+
+.errorContainer {
+  background: #833;
+  padding: 16px;
+  border: 1px solid white;
+  border-radius: 8px;
+  width: 500px;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  min-height: 110px;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
 }
